# nicx

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: version.hpp.in
docs/: nicx.1
include/commands/: CronCommand.hpp  GitCommand.hpp  GpgCommand.hpp  PassCommand.hpp  PkgCommand.hpp  SystemCommand.hpp
include/core/: Application.hpp  CommandRegistry.hpp  Config.hpp  ICommand.hpp
include/git/: RepoStore.hpp
include/output/: IRenderer.hpp  TerminalRenderer.hpp
include/pkg/: IPackageManager.hpp  PackageManagerDetector.hpp  PackageStore.hpp
include/pkg/managers/: AptPackageManager.hpp  DnfPackageManager.hpp  PacmanPackageManager.hpp  ZypperPackageManager.hpp
include/system/: SystemProbe.hpp
scripts/: install.sh
src/: main.cpp
src/commands/: CronCommand.cpp  GitCommand.cpp  GpgCommand.cpp  PassCommand.cpp  PkgCommand.cpp  SystemCommand.cpp
src/core/: Application.cpp  CommandRegistry.cpp  Config.cpp
src/git/: RepoStore.cpp
src/output/: TerminalRenderer.cpp
src/pkg/: PackageManagerDetector.cpp  PackageStore.cpp
src/pkg/managers/: AptPackageManager.cpp  DnfPackageManager.cpp  PacmanPackageManager.cpp  ZypperPackageManager.cpp
src/system/: SystemProbe.cpp
